force-app/main/default/objects/CommandUsage__c/CommandUsage__c.object-meta.xml
<CustomObject>
    <label>Command Usage</label>
    <nameField>
        <displayFormat>CU-{0000000000}</displayFormat>
        <label>Command Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Command Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>