force-app/main/default/objects/CommandUsage__c/fields/ActionablePhrase__c.field-meta.xml
<CustomField>
    <fullName>ActionablePhrase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actionable Phrase</label>
    <referenceTo>ActionablePhrase__c</referenceTo>
    <relationshipLabel>Command Usages</relationshipLabel>
    <relationshipName>PhraseUsages</relationshipName>
    <type>Lookup</type>
</CustomField>