force-app/main/default/objects/CommandUsage__c/fields/ActionablePhraseText__c.field-meta.xml
<CustomField>
    <fullName>ActionablePhraseText__c</fullName>
    <label>Actionable Phrase Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>