force-app/main/default/objects/CommandUsage__c/fields/ActionStatus__c.field-meta.xml
<CustomField>
    <fullName>ActionStatus__c</fullName>
    <label>ActionStatus</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>