force-app/main/default/objects/CommandUsage__c/fields/MatchRank__c.field-meta.xml
<CustomField>
    <fullName>MatchRank__c</fullName>
    <label>MatchRank</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>