force-app/main/default/objects/CommandUsage__c/fields/OrderRank__c.field-meta.xml
<CustomField>
    <fullName>OrderRank__c</fullName>
    <label>OrderRank</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>