force-app/main/default/objects/CommandUsage__c/fields/OverallRank__c.field-meta.xml
<CustomField>
    <fullName>OverallRank__c</fullName>
    <label>OverallRank</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>