force-app/main/default/objects/CommandUsage__c/fields/RequestedPhrase__c.field-meta.xml
<CustomField>
    <fullName>RequestedPhrase__c</fullName>
    <label>RequestedPhrase</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>