force-app/main/default/objects/CommandUsage__c/fields/ResultsReturned__c.field-meta.xml
<CustomField>
    <fullName>ResultsReturned__c</fullName>
    <label>ResultsReturned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>